--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: hayth
 github_username:  erichayth
 
 # Build settings
-theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
